# glint

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: automerge.yml  ci.yml  merge-readiness.yml  release.yml
compat/: Dockerfile  README.md  capture_upstream.py  generate-upstream-fixtures.sh
compat/fixtures/: bootstrap-common-path.json
docs/: architecture.md  doctrine.md
docs/spec/: git-super-status.md  prompt-latency.md  shell-integration.md
scripts/: benchmark.sh  check-latency.sh  check.sh  install-hooks.sh  protect-main.sh
scripts/bench/: prepare-corpus.sh  render-prompt.zsh  run-timed.zsh
src/: git.rs  lib.rs  main.rs  render.rs
tests/: cli.rs  compat_fixtures.rs
